Changes for 1.1beta10:

 - fixed confugration of triggers having logseverity() (Alexei)
 - changed size of functions.function to varchar(12) (Alexei)
 - fixed evaluation of simple checks (Alexei)
 - fixed history cleaning for logs (Eugene)
 - fixed left axis calculation of graph (Eugene)
 - fixed Win32 ZABBIX agent log monitoring (Eugene)
 - renamed screens_items.resource -> resourcetype (Alexei)
 - renamed screens.rows ->vsize, cols -> hsize (Alexei)
 - renamed audit.resource -> resourcetype (Alexei)
 - fixed evaluation of max,min,count,sum for item having integer values (Alexei)
 - support of special unit "unixtime" (Alexei)
 - removed unused table stats (Alexei)
 - removed all references to escalations (Alexei)
 - table audit renamed to auditlog (Alexei)
 - speed improvement for Overview screens (Eugene)
 - developed 'net.if.total[*]' parameter (Eugene)
 - fixed new map link adding (Eugene)
 - fixed host group adding (Eugene)
 - fixed map displaying (Eugene)
 - fixed 'No permissions' for 'Latest data','Triggers','Alarms' screens (Eugene)
 - fixed permision deletion (Eugene)
 - fixed 'get_map_by_sysmapid' function calls(Eugene)
 - improved php code execution speed (Eugene)
 - fixed zabbix_sender for sending values from a file (Alexei)
 - integer values will not be treated a sunsupported for items having type float (Alexei)
 - fixed is_double() (Alexei)
 - improved performance of MySQL calls (Alexei)
 - started development of Oracle support (Alexei)
 - added server's parameter UnreachableDelay (Alexei)
 - added server's parameter UnreachablePeriod (Alexei)
 - fixed wrong logic in processing of timeouts and network errors (Alexei)
 - added server's parameter UnavailableDelay (Alexei)
 - improved support of proc.num[<process>,<user name>] for win32 agent (Eugene)
 - replaced old naming of items by new naming for win32 agent (Eugene)
 - fixed action adding (Eugene)
 - improved 'Latest data' sreen, items grouped by applications (Eugene)