@@ -816,3 +816,14 @@ CREATE TABLE items_applications (
 	PRIMARY KEY (applicationid,itemid)
 ) type=InnoDB;
 
+--
+-- Table structure for table 'help_items'
+--
+
+CREATE TABLE help_items (
+	itemtype		int(4)          DEFAULT '0' NOT NULL,
+	key_			varchar(64)	DEFAULT '' NOT NULL,
+	description		varchar(255)	DEFAULT '' NOT NULL,
+	PRIMARY KEY (itemtype, key_)
+) type=InnoDB;
+
