@@ -811,4 +811,16 @@ CREATE TABLE items_applications (
         FOREIGN KEY (itemid) REFERENCES items
 );
 
+--
+-- Table structure for table 'help_items'
+--
+
+CREATE TABLE help_items (
+	itemtype	int4		DEFAULT '0' NOT NULL,
+	key_		varchar(64)	DEFAULT '' NOT NULL,
+	description	varchar(255)	DEFAULT '' NOT NULL,
+	PRIMARY KEY	(itemtype, key_)
+);
+
+
 VACUUM ANALYZE;
