@@ -49,3 +49,10 @@ update screens_items set resourcetype=resource;
 alter table screens_items drop resource;
 
 alter table functions change function function varchar(12) DEFAULT '' NOT NULL;
+
+CREATE TABLE help_items (
+        itemtype        int4            DEFAULT '0' NOT NULL,
+        key_            varchar(64)     DEFAULT '' NOT NULL,
+        description     varchar(255)    DEFAULT '' NOT NULL,
+        PRIMARY KEY     (itemtype, key_)
+);
